# stock-dashboard-backend

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routes/: search.py  stocks.py
app/core/: config.py  security.py
app/services/: cache.py  supabase.py
