[tool.poetry]
name = "stock-dashboard-backend"
version = "0.1.0"
description = ""
authors = ["peisuke <peisuke.com@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
supabase = "^2.10.0"
fastapi-jwt = "^0.3.0"
redis = "^5.2.0"
pytest = "^8.3.3"
uvicorn = "^0.32.0"
upstash-redis = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
